namespace LabirynthCrawler.Model.Observers;

public interface IDeathObserver
{
    void OnAllyDeath();
}